<resources>
    <string name="app_name">ParkFinder</string>
    <string name="parks">Parks</string>
    <string name="camping">Camping</string>
    <string name="national">National</string>
    <string name="state">State</string>
    <string name="location">Location:</string>
    <string name="fees">Fees:</string>
    <string name="hours">Hours:</string>
    <string name="description">Description:</string>
    <string name="activities">Activities:</string>
    <string name="photos">Photos:</string>
    <string name="view_favorites">View Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove">Remove</string>
    <string name="_added">Added</string>
    <string name="_removed">Removed</string>
    <string name="empty_list_try_another">Empty List...</string>
    <string name="loading">Loading</string>
    <string name="loading_data">Loading Data</string>
    <string name="no_internet">You must have an internet connection to use this app</string>

    <string-array name="listOrMapsArray">
        <item>List</item>
        <item>Map</item>
    </string-array>

    <string-array name="statesArray">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Marshall Islands</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Micronesia</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Mariana Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Palau</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>U.S. Minor Outlying Islands</item>
        <item>U.S. Virgin Islands</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>Washington DC</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="stateCodesArray">
        <item>AL</item>
        <item>AK</item>
        <item>AS</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>GU</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MH</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>FM</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>MP</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PW</item>
        <item>PA</item>
        <item>PR</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UM</item>
        <item>VI</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>DC</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>


</resources>